--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.2",
     "@nextui-org/react": "^2.1.7",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
@@ -17,6 +18,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.2",
+    "graphql": "^16.8.0",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
