--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.2",
     "@nextui-org/react": "^2.1.7",
+    "@phosphor-icons/react": "^2.0.10",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -20,6 +21,7 @@
     "framer-motion": "^10.16.2",
     "graphql": "^16.8.0",
     "next": "13.4.19",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
